--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 
-    <title>Hello, world!</title>
+    <title>Jquery UI Practice</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
           </div>
         </div>
       </nav>
-    <h1 class="text-center">Hello, world!</h1>
+    <h1 class="text-center text-warning mb-3">Jquery UI Practice</h1>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12">
