--- a/dragable.html
+++ b/dragable.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 
-    <title>Hello, world!</title>
+    <title>Jquery UI Practice</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
